--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,9 +1,39 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>details</ion-title>
+  <ion-toolbar color="secondary">
+    <ion-title>Details</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" offset="3">
+        <ion-img [src]="selectedCourse.image"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="8" offset="2">
+        <h2>{{ selectedCourse.title }} By {{ selectedCourse.author}}</h2>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+
+  <div class="ion-margin">
+
+    <strong>Content of this course : </strong>
+    <ion-list>
+      <ion-item *ngFor="let keyword of selectedCourse.keywords">
+        <ion-label>{{keyword}}</ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
 
 </ion-content>
