--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -5,7 +5,7 @@
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+      <ion-icon (click)="presentAlert()" slot="icon-only" name="trash-outline"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
