--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       Our Catalog
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-icon routerLink="/add" slot="icon-only" name="add-circle-outline"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
