--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -6,4 +6,25 @@
 
 <ion-content>
 
+  <div class="ion-margin">
+
+
+    <form #f="ngForm">
+      <label for="">Title</label>
+      <input ngModel type="text" class="form-control" name="title">
+      <label for="">Author</label>
+      <input ngModel type="text" class="form-control" name="author">
+      <label for="">Image</label>
+      <input ngModel type="url" class="form-control" name="image">
+      <label for="">keywords</label>
+      <input ngModel type="text" class="form-control" name="keywords">
+
+
+
+      <ion-button color="primary" (click)="addNewCourse(f.value)">Add</ion-button>
+
+    </form>
+
+  </div>
+
 </ion-content>
